Commit to original repo

--- a/menzalib/Test new dy.ipynb
+++ b/menzalib/Test new dy.ipynb
@@ -8,25 +8,92 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from numpy import sqrt, absolute, log, ones, zeros, array, transpose\n",
+    "from numpy.linalg import multi_dot\n",
+    "from numpy.random import sample\n",
+    "from scipy.optimize import curve_fit\n",
+    "from scipy.stats import chi2\n",
+    "from numdifftools.nd_algopy import Gradient, Derivative\n",
+    "from inspect import signature\n",
+    "\n",
+    "from scipy import stats\n",
+    "from jax import random\n",
+    "from jax import numpy as jnp\n",
+    "from warnings import warn\n",
+    "\n",
+    "from jax.config import config\n",
+    "config.update(\"jax_enable_x64\", True)\n",
+    "\n",
+    "import numpy as np\n",
     "import pylab as pl\n",
     "from jax import grad\n",
     "from jax import numpy as jnp\n",
     "from jax import random\n",
-    "from scipy import stats\n",
+    "from scipy import stats\\\n",
     "\n",
     "import line_profiler\n",
-    "%load_ext line_profiler"
+    "%load_ext line_profiler\n",
+    "\n",
+    "from analisi_errori import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.01990827, 0.07930196, 0.4997989 , 0.50276367])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
+    "x = np.array([1,2,5,5])\n",
+    "dx = x*0.01\n",
+    "\n",
+    "propagate_errors(f, x, dx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 1.59921062e-05, -1.29630637e-05,  1.22674165e-06],\n",
+       "       [-1.29630637e-05,  1.66506017e-05, -7.01510621e-06],\n",
+       "       [ 1.22674165e-06, -7.01510621e-06,  6.00985934e-06]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
     "cov = np.random.normal(0, 1, (3, 3))\n",
     "cov = cov@cov.T\n",
-    "x = [1]*3"
+    "x = [1]*3\n",
+    "\n",
+    "dy(f, x, 1e-6*cov)"
    ]
   },
   {
@@ -66,54 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "d5e49c34-ed9c-4060-9c40-783acde534f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/lettera/anaconda3/lib/python3.8/site-packages/jax/_src/numpy/lax_numpy.py:2929: UserWarning: Explicitly requested dtype <class 'jax._src.numpy.lax_numpy.float64'> requested in array is not available, and will be truncated to dtype float32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n  lax._check_user_dtype_supported(dtype, \"array\")\nWARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-3e2c292ffe59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcov\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mddof\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mcompute_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcov\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-20-3e2c292ffe59>\u001b[0m in \u001b[0;36mcompute_error\u001b[0;34m(f, x, pcov, n_samples)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpcov\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpcov\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPRNGKey\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Monte carlo based error propagation\n",
-    "def f(x):\n",
-    "    # x, y, z = x.T\n",
-    "    # return np.array([x**2, np.sin(x*y), np.cos(x*y/z)])\n",
-    "    return np.array([x[0]**2, np.sin(x[0]*x[0]), np.cos(x[0]*x[1]*x[2])])\n",
-    "\n",
-    "def compute_error(f, x, pcov, n_samples=1e6):\n",
-    "    x, pcov = jnp.array(x, dtype=jnp.float64), jnp.array(pcov, dtype=jnp.float64)\n",
-    "\n",
-    "    seed = int(time.time())\n",
-    "    key = random.PRNGKey(seed)\n",
-    "    \n",
-    "    samples = random.multivariate_normal(key, mean=x, cov=pcov, shape=(int(n_samples),))\n",
-    "    y = f(samples.T)\n",
-    "    mean = f(x)\n",
-    "\n",
-    "    return jnp.cov(y, ddof=1)\n",
-    "\n",
-    "compute_error(f, x, cov)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "22975e88-2445-4c6b-81cb-541cfb05a195",
    "metadata": {},
@@ -141,55 +160,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28af6464-937b-4471-acf9-ac50875c344c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Gradient based tests for error propagation\n",
-    "\n",
-    "\n",
-    "def h(x):\n",
-    "    return jnp.sin(x)\n",
-    "\n",
-    "def derivate(f, x, h=1e-4):\n",
-    "    return (f(x+h) - f(x-h)) / (2*h)\n",
-    "    \n",
-    "g = grad(h)\n",
-    "\n",
-    "g(0.)\n",
-    "\n",
-    "g(np.pi*0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "DeviceArray([12.,  2.,  3., 45.], dtype=float64)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "from jax.config import config\n",
-    "config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "import time\n",
-    "import jax\n",
-    "\n",
-    "jax.numpy.array([12,2,3,45], dtype=float)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "id": "465451e9-6928-4339-9acf-5f8fc5236144",
    "metadata": {},
@@ -206,8 +176,7 @@
     }
    ],
    "source": [
-    "# Faster number generation using jax\n",
-    "\n",
+    "# Faster random number generation using jax\n",
     "\n",
     "key = random.PRNGKey(0)\n",
     "mean = jnp.array([0]*3)\n",
@@ -215,52 +184,6 @@
     "\n",
     "%time x=np.random.multivariate_normal(mean, cov, size=1000000)\n",
     "%time x=random.multivariate_normal(key, mean=mean, cov=cov, shape=(int(1e8),))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "55a84001-c8f7-441f-af9b-712104910352",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([[2.6600852, 0.7940799, 2.9283135],\n",
-       "             [0.7940799, 2.3275447, 2.533829 ],\n",
-       "             [2.9283135, 2.533829 , 5.1483064]], dtype=float32)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "a01e6a89-5f2b-43aa-9e3b-66952aaa6d28",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([[2.660535 , 0.7941171, 2.9286234],\n",
-       "             [0.7941171, 2.3282158, 2.5344994],\n",
-       "             [2.9286234, 2.5344994, 5.149097 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jnp.cov(x.T)"
    ]
   }
  ],
